Change accent text block

--- a/FluentEditor/ThemePalette/ThemePaletteTestContent.xaml
+++ b/FluentEditor/ThemePalette/ThemePaletteTestContent.xaml
@@ -72,44 +72,40 @@
                                Margin="0,0,0,12" />
 
                     <ContentControl HorizontalAlignment="Center"
+                                    DataContext="{ThemeResource AccentColorLight3Brush}"
+                                    ContentTemplate="{StaticResource AccentBlock}"
+                                    Margin="0,0,0,12" />
+
+                    <ContentControl HorizontalAlignment="Center"
                                     DataContext="{ThemeResource AccentColorDark3Brush}"
                                     ContentTemplate="{StaticResource AccentBlock}"
                                     Margin="0,0,0,12" />
 
-                    <ContentControl HorizontalAlignment="Center"
-                                    DataContext="{ThemeResource AccentColorDark2Brush}"
-                                    ContentTemplate="{StaticResource AccentBlock}"
-                                    Margin="0,0,0,12" />
-                    <ContentControl HorizontalAlignment="Center"
-                                    DataContext="{ThemeResource AccentColorDark1Brush}"
-                                    ContentTemplate="{StaticResource AccentBlock}"
-                                    Margin="0,0,0,12" />
-
-                    <TextBlock x:Uid="TestContentAccentTextBlock"
+                    <TextBlock x:Uid="TestContentAccentLight3TextBlock"
                                Style="{StaticResource Light3AccentTextBlockStyle}"
                                TextTrimming="CharacterEllipsis"
                                Margin="0,0,0,12" />
-                    <TextBlock x:Uid="TestContentAccentTextBlock"
+                    <!--<TextBlock x:Uid="TestContentAccentTextBlock"
                                Style="{StaticResource Light2AccentTextBlockStyle}"
                                TextTrimming="CharacterEllipsis"
                                Margin="0,0,0,12" />
                     <TextBlock x:Uid="TestContentAccentTextBlock"
                                Style="{StaticResource Light1AccentTextBlockStyle}"
                                TextTrimming="CharacterEllipsis"
-                               Margin="0,0,0,12" />
+                               Margin="0,0,0,12" />-->
                     <TextBlock x:Uid="TestContentAccentTextBlock"
                                Style="{StaticResource AccentTextBlockStyle}"
                                TextTrimming="CharacterEllipsis"
                                Margin="0,0,0,12" />
-                    <TextBlock x:Uid="TestContentAccentTextBlock"
+                    <!--<TextBlock x:Uid="TestContentAccentTextBlock"
                                Style="{StaticResource Dark1AccentTextBlockStyle}"
                                TextTrimming="CharacterEllipsis"
                                Margin="0,0,0,12" />
                     <TextBlock x:Uid="TestContentAccentTextBlock"
                                Style="{StaticResource Dark2AccentTextBlockStyle}"
                                TextTrimming="CharacterEllipsis"
-                               Margin="0,0,0,12" />
-                    <TextBlock x:Uid="TestContentAccentTextBlock"
+                               Margin="0,0,0,12" />-->
+                    <TextBlock x:Uid="TestContentAccentDark3TextBlock"
                                Style="{StaticResource Dark3AccentTextBlockStyle}"
                                TextTrimming="CharacterEllipsis"
                                Margin="0,0,0,12" />
@@ -146,31 +142,31 @@
                     <StackPanel Orientation="Horizontal"
                                 HorizontalAlignment="Center"
                                 Margin="0,0,0,12">
-                        <TextBlock x:Uid="TestContentAccentTextBlock"
+                        <TextBlock x:Uid="TestContentAccentLight3TextBlock"
                                    Style="{StaticResource Light3AccentTextBlockStyle}"
                                    TextTrimming="CharacterEllipsis"
                                    Margin="4,0" />
-                        <TextBlock x:Uid="TestContentAccentTextBlock"
+                        <!--<TextBlock x:Uid="TestContentAccentTextBlock"
                                    Style="{StaticResource Light2AccentTextBlockStyle}"
                                    TextTrimming="CharacterEllipsis"
                                    Margin="4,0" />
                         <TextBlock x:Uid="TestContentAccentTextBlock"
                                    Style="{StaticResource Light1AccentTextBlockStyle}"
                                    TextTrimming="CharacterEllipsis"
-                                   Margin="4,0" />
+                                   Margin="4,0" />-->
                         <TextBlock x:Uid="TestContentAccentTextBlock"
                                    Style="{StaticResource AccentTextBlockStyle}"
                                    TextTrimming="CharacterEllipsis"
                                    Margin="4,0" />
-                        <TextBlock x:Uid="TestContentAccentTextBlock"
+                        <!--<TextBlock x:Uid="TestContentAccentTextBlock"
                                    Style="{StaticResource Dark1AccentTextBlockStyle}"
                                    TextTrimming="CharacterEllipsis"
                                    Margin="4,0" />
                         <TextBlock x:Uid="TestContentAccentTextBlock"
                                    Style="{StaticResource Dark2AccentTextBlockStyle}"
                                    TextTrimming="CharacterEllipsis"
-                                   Margin="4,0" />
-                        <TextBlock x:Uid="TestContentAccentTextBlock"
+                                   Margin="4,0" />-->
+                        <TextBlock x:Uid="TestContentAccentDark3TextBlock"
                                    Style="{StaticResource Dark3AccentTextBlockStyle}"
                                    TextTrimming="CharacterEllipsis"
                                    Margin="4,0" />
